Menambahkan feature Patient Filter di PatientRecyclerViewActivity.java Menambahkan feature Refresh Patient Data di PatientRecyclerViewActivity.java Menambahkan method setFilter di RecyclerViewCardAdapter.java Menambahkan icon ic_search.png Menambahkan icon ic_refresh.png Menambahkan widget SwipeRefreshLayout di acitivity_patient_recycler_view.xml Menambhakan dependencies retrofit di build.grade(app) Ada perubahan di codeStyleSettings.xml

--- a/app/src/main/res/layout/activity_patient_recycler_view.xml
+++ b/app/src/main/res/layout/activity_patient_recycler_view.xml
@@ -6,11 +6,18 @@
     android:layout_height="wrap_content"
     >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewId"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayoutId"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:descendantFocusability="blocksDescendants"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerViewId"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:descendantFocusability="blocksDescendants"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
