Menambah dependencies di build.gradle(app) Menambah feature Calendar Menambah file Event.java di Folder pojo Menambah file MyJsonService.java di Folder service Menambah icon ic_view_week.xml, ic_calendar.png Menambah layout activity_calendar.xml dan activity_week_view.xml Menambah menu menu_calendar.xml dan menu_calendar_week_view.xml

--- a/app/src/main/res/xml/bottombar_tabs.xml
+++ b/app/src/main/res/xml/bottombar_tabs.xml
@@ -9,9 +9,9 @@
         id="@+id/tab_chat"
         title="Chat" />
     <tab
-        icon="@drawable/ic_android_black_24dp"
-        id="@+id/tab_nearby"
-        title="Nearby" />
+        icon="@drawable/ic_calendar"
+        id="@+id/tab_calendar"
+        title="Calendar" />
     <tab
         icon="@drawable/ic_android_black_24dp"
         id="@+id/tab_friends"
