Menambah feature Fingerprint Authentication di Login Activity Menambah FingerprintHandler untuk Fingerprint Authentication Menambah background untuk button login dan icon untuk fingerprint

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -10,6 +10,7 @@
         android:id="@+id/calendarPickerViewId"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:tsquare_dividerColor="@color/fui_transparent"
         />
 
 </RelativeLayout>
