--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,16 +24,21 @@
         android:textStyle="bold"
         />
 
+    <!--Pin Code Authentication-->
+
     <TextView
+        android:id="@+id/txtViewPinLogin"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Enter your pin: "
-        android:textSize="20dp"
+        android:text="Log in with Pin Code"
+        android:textSize="15dp"
         android:textStyle="bold"
         />
 
     <com.goodiebag.pinview.Pinview
+        android:visibility="gone"
         android:id="@+id/pinView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,6 +62,53 @@
         android:text="Wrong PIN Code "
         android:textSize="10dp"
         android:textColor="@color/colorRed"/>
+
+
+    <!--Fingerprint Authentication-->
+
+    <TextView
+        android:id="@+id/txtViewFingerprintAuth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Log in with Fingerprint Authentication"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        />
+
+    <ImageView
+        android:id="@+id/imgViewFingerprint"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_fingerprint"
+        />
+
+    <Button
+        android:id="@+id/btnPinLogin"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="Login with Pin"
+        android:textSize="20dp"
+        android:background="@drawable/background_pin_login_btn"
+        android:shadowColor="#A8A8A8"
+        android:shadowRadius="10"/>
+
+    <Button
+        android:visibility="gone"
+        android:id="@+id/btnFingerprintAuth"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Fingerprint Authentication"
+        android:textSize="20dp"
+        android:background="@drawable/background_pin_login_btn"
+        android:shadowColor="#A8A8A8"
+        android:shadowRadius="10"/>
 
     <android.support.v4.widget.ContentLoadingProgressBar
         android:id="@+id/progressBarId"
