Menambah method OnOptionItemSelected di PatientDetailActivity.java Mengubah warna background Menghapus 2 Activity (PatientListActivity.java dan PatientListViewActivity.java) dan 2 Layout (activity_patient_list.xml dan acitivity_patient_list_view.xml) karena sudah tidak dipakai

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/chatRelativeLayout"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/colorDarkWhite">
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
