--- a/app/src/main/res/drawable/background_custom_list_view.xml
+++ b/app/src/main/res/drawable/background_custom_list_view.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/darker_gray" />
+            <solid android:color="@color/colorBlack" />
             <corners android:radius="5dp" />
         </shape>
     </item>
@@ -11,7 +11,7 @@
         android:left="1dp"
         android:right="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorDarkWhite" />
+            <solid android:color="@color/colorWhite" />
             <corners android:radius="5dp" />
         </shape>
     </item>
