--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="5dp">
+    android:layout_marginTop="5dp"
+    android:background="@color/colorDarkWhite">
 
     <com.squareup.timessquare.CalendarPickerView
         android:id="@+id/calendarPickerViewId"
