--- a/app/src/main/res/layout/custom_card_recycler_view.xml
+++ b/app/src/main/res/layout/custom_card_recycler_view.xml
@@ -8,7 +8,8 @@
         android:id="@+id/cardViewId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:descendantFocusability="blocksDescendants">
+        android:descendantFocusability="blocksDescendants"
+        >
 
         <LinearLayout
             android:id="@+id/LinearLayoutCardViewId"
