Update di CalendarActivity.java, ChatActivity.java, WeekViewActivity.java, TimelineAdapter.java, dan menu_calendar.xml Menghapus ic_calendar.png (folder drawable-hdpi, drawable-mdpi, drawable-xhdpi, dan drawable-xxhdpi) dan menambah ic_calendar.png (gambar berbeda)

--- a/app/src/main/res/menu/menu_calendar.xml
+++ b/app/src/main/res/menu/menu_calendar.xml
@@ -4,8 +4,7 @@
 
     <item
         android:id="@+id/menuWeekView"
-        android:title="Week View"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_view_week"/>
+        android:title="Today Event"
+        app:showAsAction="always" />
 
 </menu>
