Menambah CalendarViewActivity.java

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">25dp</dimen>
     <dimen name="fab_margin_right">16dp</dimen>
+    <dimen name="calendar_view_margin">10dp</dimen>
+    <dimen name="text_size_15dp">15dp</dimen>
 </resources>
